--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Decentrafit</string>
+
+
+
+    <!-- Navigation Bar Sections-->
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
 </resources>
